about us text changes

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -143,21 +143,18 @@
 
 					<div class="fix-10-12">
 						<h1 class="fromCenter">
-							Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.
+							Rikstäckande besiktningstjänster med digitaliserad besiktningsprocess.
 						</h1>
-						<br>
-						<h2 class="small">
-							Över hela landet med en digitaliserad besiktningsprocess.
-						</h2>
 						<div class="margin-bottom-4 border-bottom-grey"></div>
 						<div class="left ae-5 cropBottom">
-							<p>Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader. Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden</p>
+							<p>Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader. Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden. Våra grundare och ägare är alltjämt aktiva i företaget.</p>
+							<p>Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.</p>
 							<p>Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete. Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande. Vi erbjuder kompletta besiktningsgrupper för samtliga
 								fack.</p>
-							<p>Huvudkontoret finns i Stockholm och filialer finns i Uppsala, Norrköping, Göteborg och Helsingborg. Våra grundare och ägare är alltjämt aktiva i företaget.</p>
+							<p>Huvudkontoret är placerat i Stockholm och medarbetare finns över hela landet.</p>
 							<p>Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag. Nyligen blev vi landets första besiktningsföretag att erbjuda radonkontroll.</p>
-							<p>Med vårt helhetskoncept har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt</p>
-							<a class="text-blue bold fromLeft popupTrigger" data-popup-id="ispect-details"><p class="small">Mer om vår digitaliserade besikningsprocess</p></a>
+							<p>Med vår digitaliserade besiktningsprocess som omfattar hela byggprocessen, har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt</p>
+							<a class="text-blue bold fromLeft popupTrigger" data-popup-id="ispect-details"><p class="small">Mer om vår digitaliserade besiktningsprocess</p></a>
 						</div>
 					</div>
 
