--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -69,7 +69,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><a href="../nyheter/">Nyheter & Publicerat</a></li>
+					<li><a href="../nyheter/">Publicerat & Press</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
@@ -123,7 +123,7 @@
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<h1 class="hero-title">Nyheter från Besiktningsman.se</h1>
+						<h1 class="hero-title">Publicerat & Press</h1>
 					</div>
 				</div>
 			</div>
