A bunch of text updates on the landing page

--- a/index.html
+++ b/index.html
@@ -321,16 +321,16 @@
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Entreprenadbesiktning för nyproduktion och ROT</h1>
 								<p>
-									Vi erbjuder ett komplett utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
+									Besiktningsman.se erbjuder ett komplett rikstäckande utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
 								</p>
 								<p>
-									Vi erbjuder också ett samlat helhetskoncept med iSpect för ökad lönsamhet och leveranssäkerhet i byggprojekt.
+									Vi erbjuder också ett samlat helhetskoncept med besiktningsappen iSpect, för ökad lönsamhet och leveranssäkerhet i byggprojekt.
 								</p>
 								<p>
 									Det ger bland annat möjlighet till noll byggfel vid slutbesiktning.
 								</p>
 								<a class="popupTrigger" data-popup-id="services"><p class="text-blue bold small margin-bottom-3">Våra tjänster för entreprenadbesiktning</p></a>
-								<a class="popupTrigger" data-popup-id="ispect-details"><p class="text-blue bold small">Vårt helhetskoncept med iSpect</p></a>
+								<a class="popupTrigger" data-popup-id="ispect-details"><p class="text-blue bold small">Mer om digitaliserad entreprenadbesiktning</p></a>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
 										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
@@ -388,9 +388,9 @@
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
 								<p>
-									Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av nyproduktion och ROT-arbeten i bostadrättsfastigheter, samt KA-ansvariga.
+									Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av nyproduktion och ROT-arbeten, samt KA-ansvariga, för bostadrättsfastigheter.
 								</p>
-								<a class="popupTrigger" data-popup-id="services"><p class="text-blue bold small margin-bottom-3">Våra tjänster för Bostadsrättsföreningar</p></a>
+								<a class="popupTrigger" data-popup-id="services"><p class="text-blue bold small margin-bottom-3">Våra tjänster för bostadsrättsföreningar</p></a>
 								<a class="popupTrigger" data-popup-id="brf-services"><p class="text-blue bold small">Mer om vårt erbjudande</p></a>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
@@ -504,9 +504,9 @@
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Vår digitala besiktningsprocess</h1>
 								<h3>För ökad lönsamhet och leveranssäkerhet i byggprojekt</h3>
-								<p>iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
+								<p>Direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
 								<a class="popupTrigger" data-popup-id="ispect-details">
-									<p class="margin-bottom-2 text-blue bold small">Vårt helhetskoncept med iSpect</p>
+									<p class="margin-bottom-2 text-blue bold small">Mer om digitaliserad entreprenadbesiktning</p>
 								</a>
 								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
 								<script>
