--- a/karriar/index.html
+++ b/karriar/index.html
@@ -73,7 +73,10 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><a href="../nyheter/">Nyheter & Publicerat</a></li>
+					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu">
+						Dokument
+					</li>
+					<li><a href="../nyheter/">Publicerat & Press</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
@@ -82,7 +85,7 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="#erbjudande">Vårt erbjudande</a></li>
+					<li><a href="../#erbjudande">Vårt erbjudande</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
 					<li><a href="../kontakt/" class="text-blue">Kontakt</a></li>
 				</ul>
@@ -95,7 +98,15 @@
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
-
+<!-- Docs Menu dropdown -->
+<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu">
+  <ul>
+    <li class="toSlide-1 text-blue micro bold"><a href="#"></a>Besiktningsboken</li>
+    <li class="toSlide-2 text-blue micro bold"><a href="#"></a>Lagbok 1</li>
+    <li class="toSlide-3 text-blue micro bold"><a href="#"></a>Lagbok 2</li>
+    <li class="link text-blue micro bold"><a href="http://google.com" target="_blank">Exernal Link</a></li>
+  </ul>
+</div>
 	<!-- Sidebar -->
 	<nav class="sidebar white" data-sidebar-id="1">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
@@ -114,7 +125,7 @@
 				<li><a href="../om_oss/">Om oss</a></li>
 				<br>
 				<br>
-				<li><a href="../nyheter/">Nyheter & Publicerat</a></li>
+				<li><a href="../nyheter/">Publicerat & Press</a></li>
 			</ul>
 
 		</div>
@@ -185,7 +196,7 @@
 
         <div class="fix-10-12 center">
 					<img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;">
-          <p class="hero">Besiktning och KA-tjänster över hela landet</p>
+          <p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
           <ul class="later center">
             <li class="col-6-12 ae-3">
               <h3 class="margin-bottom-1">Kontor</h3>
