Trying to figure out a ok layout for all the different parts of the news page

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -141,39 +141,45 @@
 		</div>
 		<div class="background" style="background-image:url(../assets/img/backgrounds/keyboard.jpg)"></div>
 	</section>
-	<section class="slide whiteSlide">
-		<div class="content">
-			<div class="container-lg  margin-top-1 margin-bottom-10">
-				<div class="wrap">
 
-					<div class="fix-10-12">
-						<h1 class="ae-1 fromLeft left">Backåkra</h1>
+
+	<!-- NEWS FLOW -->
+	<section class="slide whiteSlide margin-top-1">
+		<div class="content">
+			<div class="container-lg">
+					<!-- PR widget -->
+					<div class="fix-5-12" style="float: left;">
+						<div class="pad shadow selected">
+							<h3 class="pad-header margin-0" style="padding-left: 20px;">
+								Presskontakt
+							</h3>
+							<div class="margin-left-2">
+								<p class="micro">Magnus Janson</p>
+								<p class="micro">email</p>
+								<p class="micro">phone</p>
+								<a href="#"><p class="micro bold text-blue">Foton</p></a>
+								<a href="#"><p class="micro bold text-blue">Logga</p></a>
+							</div>
+							<h3 class="pad-header margin-0" style="padding-left: 20px;">
+								Pressmeddelanden
+							</h3>
+							<div class="margin-left-2">
+								<a href="#"><p class="micro bold text-blue">Länk PM1</p></a>
+								<a href="#"><p class="micro bold text-blue">Länk PM2</p></a>
+							</div>
+						</div>
+					</div>
+					<!-- newsflow -->
+					<div class="fix-5-12" style="float: right;">
+						<h1 class="fromLeft left">Backåkra</h1>
 						<p>
 							I mars 2017 byggstartades Einar Mattssons projekt Backåkra med 81 hyresrättslägenheter i Norra Djurgårdsstaden i Stockholm. Besiktningsman.se utför här entreprenadbesiktning med iSpect, en metod som redan används i ett 50-tal olika projekt.
 						</p>
-						<div class="ae-2 fromLeft left">
+						<div class="fromLeft left">
 							<img src="../assets/img/nyheter/rl_backakra.png" alt="Backåkra besiktningsfoto">
 							<p class="small text-blueGrey">Robert Lindblom från Besiktningsman.se utför entreprenadbesiktningen av Einar Mattssons nya projekt Backåkra.</p>
 						</div>
 					</div>
-				</div>
-
-			</div>
-		</div>
-	</section>
-	<section class="slide whiteSlide">
-		<div class="content">
-			<div class="container-lg margin-bottom-10">
-				<div class="wrap">
-
-					<div class="fix-10-12">
-						<h1 class="ae-1 fromLeft left">Bostadsforum 2017</h1>
-						<div class="ae-2 fromLeft left">
-							<p>Vi var på Bostadsforum i år igen och det var fantastiskt trevligt att få träffa samtliga under mässan! Hoppas på ett lika lyckat Bostadsforum 2018.</p>
-							<img src="../assets/img/nyheter/bostadsforum17.jpg" alt="">
-						</div>
-					</div>
-				</div>
 
 			</div>
 		</div>
