renamed the contact button to customer contact

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 				<ul class="menu crop small bold">
 					<li><a href="#erbjudande">Vårt erbjudande</a></li>
 					<li><a href="karriar/">Karriär</a></li>
-					<li><a href="kontakt/" class="text-blue">Kontakt</a></li>
+					<li><a href="kontakt/" class="text-blue">Kundkontakt</a></li>
 				</ul>
 			</div>
 		</div>
@@ -201,7 +201,7 @@
 				<li><a href="#erbjudande"><p>Vårt erbjudande</p></a></li>
 				<br>
 				<br>
-				<li><a href="kontakt/"><p>Kontakt</p></a></li>
+				<li><a href="kontakt/"><p>Kundkontakt</p></a></li>
 				<br>
 				<br>
 				<li><a href="karriar/"><p>Karriär</p></a></li>
