--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -86,7 +86,7 @@
 				<ul class="menu crop small bold">
 					<li><a href="../#erbjudande">Vårt erbjudande</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
-					<li><a href="../kontakt/" class="text-blue">Kontakt</a></li>
+					<li><a href="../kontakt/" class="text-blue">Kundkontakt</a></li>
 				</ul>
 			</div>
 		</div>
@@ -115,7 +115,7 @@
 				<li><a href="../#erbjudande">Vårt erbjudande</a></li>
 				<br>
 				<br>
-				<li><a href="../kontakt/">Kontakt</a></li>
+				<li><a href="../kontakt/">Kundkontakt</a></li>
 				<br>
 				<br>
 				<li><a href="../karriar/">Karriär</a></li>
