News page layout wip

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -83,7 +83,7 @@
 				<ul class="menu crop small bold">
 					<li><a href="../#erbjudande">Vårt erbjudande</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
-					<li><a href="../kontakt/" class="text-blue">Kontakt</a></li>
+					<li><a href="../kontakt/" class="text-blue">Kundkontakt</a></li>
 				</ul>
 			</div>
 		</div>
@@ -112,7 +112,7 @@
 				<li><a href="../#erbjudande">Vårt erbjudande</a></li>
 				<br>
 				<br>
-				<li><a href="../kontakt/">Kontakt</a></li>
+				<li><a href="../kontakt/">Kundkontakt</a></li>
 				<br>
 				<br>
 				<li><a href="../karriar/">Karriär</a></li>
@@ -144,19 +144,19 @@
 
 
 	<!-- NEWS FLOW -->
-	<section class="slide whiteSlide margin-top-1">
+	<section class="slide whiteSlide margin-top-1 margin-bottom-10">
 		<div class="content">
 			<div class="container-lg">
 					<!-- PR widget -->
-					<div class="fix-5-12" style="float: left;">
-						<div class="pad shadow selected">
+					<div class="fix-5-12" style="float: left;border: 2px solid #f6f9fc;">
+						<div class="pad">
 							<h3 class="pad-header margin-0" style="padding-left: 20px;">
 								Presskontakt
 							</h3>
 							<div class="margin-left-2">
-								<p class="micro">Magnus Janson</p>
-								<p class="micro">email</p>
-								<p class="micro">phone</p>
+								<p class="micro bold" style="margin-top: 15px;">Magnus Janson</p>
+								<p class="micro bold">email</p>
+								<p class="micro bold">phone</p>
 								<a href="#"><p class="micro bold text-blue">Foton</p></a>
 								<a href="#"><p class="micro bold text-blue">Logga</p></a>
 							</div>
@@ -164,20 +164,24 @@
 								Pressmeddelanden
 							</h3>
 							<div class="margin-left-2">
-								<a href="#"><p class="micro bold text-blue">Länk PM1</p></a>
+								<a href="#"><p class="micro bold text-blue" style="margin-top: 15px;">Länk PM1</p></a>
 								<a href="#"><p class="micro bold text-blue">Länk PM2</p></a>
 							</div>
 						</div>
 					</div>
 					<!-- newsflow -->
+					<h1 class="fix-5-12 left" style="float: right;">
+						Nyheter
+						<div class="border-bottom-grey" style="margin: 0;"></div>
+					</h1>
 					<div class="fix-5-12" style="float: right;">
-						<h1 class="fromLeft left">Backåkra</h1>
+						<h3>Backåkra, Norra Djurgårdsstaden</h3>
 						<p>
 							I mars 2017 byggstartades Einar Mattssons projekt Backåkra med 81 hyresrättslägenheter i Norra Djurgårdsstaden i Stockholm. Besiktningsman.se utför här entreprenadbesiktning med iSpect, en metod som redan används i ett 50-tal olika projekt.
 						</p>
 						<div class="fromLeft left">
-							<img src="../assets/img/nyheter/rl_backakra.png" alt="Backåkra besiktningsfoto">
-							<p class="small text-blueGrey">Robert Lindblom från Besiktningsman.se utför entreprenadbesiktningen av Einar Mattssons nya projekt Backåkra.</p>
+							<img src="../assets/img/projects/brf_backakra.jpg" alt="Backåkra, Norra Djurgårdsstaden">
+							<p class="micro text-blueGrey">Backåkra, Norra Djurgårdsstaden</p>
 						</div>
 					</div>
 
