updated some button texts

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 									<li><div class="checkmark"></div><p class="small">Tillgång till vår ”Byggfelsbank”.</p></li>
 								</ul>
 								<a class="popupTrigger" data-popup-id="ispect-details"><p class="text-blue bold small margin-bottom-2">Mer om digitaliserad entreprenadbesiktning</p></a>
-								<a href="kontakt/" class="common-Button blue text-white">Tryck här så kontaktar vi dig</a>
+								<a href="kontakt/" class="common-Button blue text-white">Kontakta mig</a>
 							</li>
 							<div class="col-6-12 left fromRight">
 								<!-- EXAMPLE: Slider Autoplay -->
@@ -356,7 +356,7 @@
 								<a class="popupTrigger" data-popup-id="ispect-details"><p class="text-blue bold small">Mer om digitaliserad entreprenadbesiktning</p></a>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
-										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
+										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
 										<script>
 											(function() {
 												var qs, js, q, s, d = document,
@@ -417,7 +417,7 @@
 								<a class="popupTrigger" data-popup-id="brf-services"><p class="text-blue bold small">Mer om vårt erbjudande</p></a>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
-										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
+										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
 										<script>
 											(function() {
 												var qs, js, q, s, d = document,
@@ -473,7 +473,7 @@
 								<a class="popupTrigger" data-popup-id="privat-services"><p class="text-blue bold small">Mer om besiktning för småhus mm</p></a>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
-										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
+										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
 										<script>
 											(function() {
 												var qs, js, q, s, d = document,
@@ -531,7 +531,7 @@
 								<a class="popupTrigger" data-popup-id="ispect-details">
 									<p class="margin-bottom-2 text-blue bold small">Mer om digitaliserad entreprenadbesiktning</p>
 								</a>
-								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
+								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
 								<script>
 									(function() {
 										var qs, js, q, s, d = document,
