Moved dropdown menu into the header nav so it shows up at all times

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -66,6 +66,15 @@
 
 	<!-- Panel Top #10 -->
 	<nav class="panel top forceMobileView white soft-shadow">
+		<!-- Docs Menu dropdown -->
+		<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu">
+			<ul>
+				<li class="toSlide-1 text-blue micro bold"><a href="#"></a>Besiktningsboken</li>
+				<li class="toSlide-2 text-blue micro bold"><a href="#"></a>Lagbok 1</li>
+				<li class="toSlide-3 text-blue micro bold"><a href="#"></a>Lagbok 2</li>
+				<li class="link text-blue micro bold"><a href="http://google.com" target="_blank">Exernal Link</a></li>
+			</ul>
+		</div>
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
@@ -94,15 +103,6 @@
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
-<!-- Docs Menu dropdown -->
-<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu">
-  <ul>
-    <li class="toSlide-1 text-blue micro bold"><a href="#"></a>Besiktningsboken</li>
-    <li class="toSlide-2 text-blue micro bold"><a href="#"></a>Lagbok 1</li>
-    <li class="toSlide-3 text-blue micro bold"><a href="#"></a>Lagbok 2</li>
-    <li class="link text-blue micro bold"><a href="http://google.com" target="_blank">Exernal Link</a></li>
-  </ul>
-</div>
 	<!-- Sidebar -->
 	<nav class="sidebar white" data-sidebar-id="1">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
@@ -148,7 +148,7 @@
 		<div class="content">
 			<div class="container-lg">
 					<!-- PR widget -->
-					<div class="fix-5-12" style="float: left;border: 2px solid #f6f9fc;">
+					<div class="fix-5-12 fromLeft" style=";border: 2px solid #f6f9fc;">
 						<div class="pad">
 							<h3 class="pad-header margin-0" style="padding-left: 20px;">
 								Presskontakt
@@ -169,20 +169,35 @@
 							</div>
 						</div>
 					</div>
-					<!-- newsflow -->
-					<h1 class="fix-5-12 left" style="float: right;">
+					<!-- newsflow title -->
+					<h1 class="fix-5-12 left fromRight">
 						Nyheter
 						<div class="border-bottom-grey" style="margin: 0;"></div>
 					</h1>
-					<div class="fix-5-12" style="float: right;">
-						<h3>Backåkra, Norra Djurgårdsstaden</h3>
-						<p>
-							I mars 2017 byggstartades Einar Mattssons projekt Backåkra med 81 hyresrättslägenheter i Norra Djurgårdsstaden i Stockholm. Besiktningsman.se utför här entreprenadbesiktning med iSpect, en metod som redan används i ett 50-tal olika projekt.
-						</p>
-						<div class="fromLeft left">
-							<img src="../assets/img/projects/brf_backakra.jpg" alt="Backåkra, Norra Djurgårdsstaden">
-							<p class="micro text-blueGrey">Backåkra, Norra Djurgårdsstaden</p>
+					<!-- newsflow list / latest first -->
+					<div class="fix-5-12 fromRight">
+
+						<div >
+							<h3>Rinkebyterrassen, Rinkeby</h3>
+							<p>
+								Rinkebyterrassen är nu färdigställt och har invigning under helgen den 15:e till 16:e September.
+							</p>
+							<div class="fromLeft left">
+								<img src="../assets/img/projects/sweco_rinkebyterrass.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
+								<p class="micro text-blueGrey">Rinkebyterrassen, Rinkeby</p>
+							</div>
 						</div>
+						<div>
+							<h3>Backåkra, Norra Djurgårdsstaden</h3>
+							<p>
+								I mars 2017 byggstartades Einar Mattssons projekt Backåkra med 81 hyresrättslägenheter i Norra Djurgårdsstaden i Stockholm. Besiktningsman.se utför här entreprenadbesiktning med iSpect, en metod som redan används i ett 50-tal olika projekt.
+							</p>
+							<div class="fromLeft left">
+								<img src="../assets/img/projects/brf_backakra.jpg" alt="Foto av Backåkra, Norra Djurgårdsstaden">
+								<p class="micro text-blueGrey">Backåkra, Norra Djurgårdsstaden</p>
+							</div>
+						</div>
+
 					</div>
 
 			</div>
