--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -69,6 +69,16 @@
 	</svg>
 	<!-- Panel Top #10 -->
 	<nav class="panel top forceMobileView white soft-shadow">
+		<!-- Docs Menu dropdown -->
+		<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu">
+			<ul>
+				<li class="toSlide-1 text-blue micro bold"><a href="#"></a>Besiktningsboken</li>
+				<li class="toSlide-2 text-blue micro bold"><a href="#"></a>Lagbok 1</li>
+				<li class="toSlide-3 text-blue micro bold"><a href="#"></a>Lagbok 2</li>
+				<li class="link text-blue micro bold"><a href="http://google.com" target="_blank">Exernal Link</a></li>
+			</ul>
+		</div>
+		<!-- left menu nav -->
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
@@ -79,9 +89,12 @@
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
+
 			<div class="center">
 				<a href="../"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
 			</div>
+
+			<!-- right menu nav -->
 			<div class="right">
 				<ul class="menu crop small bold">
 					<li><a href="../#erbjudande">Vårt erbjudande</a></li>
@@ -97,15 +110,7 @@
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
-<!-- Docs Menu dropdown -->
-<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu">
-  <ul>
-    <li class="toSlide-1 text-blue micro bold"><a href="#"></a>Besiktningsboken</li>
-    <li class="toSlide-2 text-blue micro bold"><a href="#"></a>Lagbok 1</li>
-    <li class="toSlide-3 text-blue micro bold"><a href="#"></a>Lagbok 2</li>
-    <li class="link text-blue micro bold"><a href="http://google.com" target="_blank">Exernal Link</a></li>
-  </ul>
-</div>
+
 	<!-- Sidebar -->
 	<nav class="sidebar white" data-sidebar-id="1">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
@@ -180,10 +185,9 @@
 				<div class="wrap left">
 
 					<div class="fix-10-12">
-						<h1 class="ae-1">Ledning</h1>
-						<p class="bold"></p>
+						<h1>Ledning</h1>
 					</div>
-					<div class="container-lg">
+					<div class="fix-10-12">
 						<!--  List one -->
 						<ul class="flex fixedSpaces later left margin-bottom-5">
 							<li class="col-3-12">
@@ -230,7 +234,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- Slide #68 -->
+
 	<section class="slide whiteSlide margin-bottom-10" id="partners">
 		<div class="content">
 			<div class="container-lg">
@@ -240,7 +244,6 @@
 						<h1>Några uppdragsgivare och samarbetspartners</h1>
 					</div>
 					<div class="fix-10-12 margin-bottom-5">
-						<!-- remove class tintLogos to disable color change of logo images -->
 						<ul class="grid equal later">
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-3">
@@ -533,6 +536,7 @@ Heleneborgsgatan 54, 117 32 Stockholm</p></a>
 			</div>
 		</div>
 	</div>
+
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
