--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-	<title>Besiktningsman.se | Nyheter</title>
+	<title>Besiktningsman.se | Publicerat</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="keywords" content="besiktningsman.se, besiktningsman.se nyheter, backåkra">
+	<meta name="keywords" content="besiktningsman.se, besiktningsman.se nyheter, publicerat, ispect, press">
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
