nyhets-sidan, ny layout

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -148,13 +148,13 @@
 		<div class="content">
 			<div class="container-lg">
 					<!-- PR widget -->
-					<div class="fix-5-12 fromLeft" style=";border: 2px solid #f6f9fc;">
-						<div class="pad">
+					<div class="fix-5-12 fromLeft" id="pr-widget">
+						<div class="pad lightgrey-border margin-bottom-5">
 							<h3 class="pad-header margin-0" style="padding-left: 20px;">
 								Presskontakt
 							</h3>
-							<div class="margin-left-2">
-								<p class="micro bold" style="margin-top: 15px;">Magnus Janson</p>
+							<div class="margin-left-2" style="margin-top: 15px;">
+								<p class="micro bold">Magnus Janson</p>
 								<p class="micro bold">email</p>
 								<p class="micro bold">phone</p>
 								<a href="#"><p class="micro bold text-blue">Foton</p></a>
@@ -168,14 +168,26 @@
 								<a href="#"><p class="micro bold text-blue">Länk PM2</p></a>
 							</div>
 						</div>
+
+						<!-- newsletter widget -->
+						<div class="pad lightgrey-border" id="newsletter-widget">
+							<h3 class="pad-header margin-0" style="padding-left: 20px;">
+								Nyhetsbrev
+							</h3>
+							<div class="margin-left-2" style="margin-top: 15px;">
+								<a href="#"><p class="micro bold text-blue">länk till nyhetsbrev #1</p></a>
+								<a href="#"><p class="micro bold text-blue">länk till nyhetsbrev #2</p></a>
+							</div>
+						</div>
 					</div>
+
 					<!-- newsflow title -->
 					<h1 class="fix-5-12 left fromRight">
-						Nyheter
+						Händelser
 						<div class="border-bottom-grey" style="margin: 0;"></div>
 					</h1>
 					<!-- newsflow list / latest first -->
-					<div class="fix-5-12 fromRight">
+					<div class="fix-5-12 fromRight" id="news">
 
 						<div >
 							<h3>Rinkebyterrassen, Rinkeby</h3>
@@ -183,10 +195,11 @@
 								Rinkebyterrassen är nu färdigställt och har invigning under helgen den 15:e till 16:e September.
 							</p>
 							<div class="fromLeft left">
-								<img src="../assets/img/projects/sweco_rinkebyterrass.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
-								<p class="micro text-blueGrey">Rinkebyterrassen, Rinkeby</p>
+								<img class=""src="../assets/img/projects/sweco_rinkebyterrass.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
+								<p class="micro text-blueGrey center">Rinkebyterrassen, Rinkeby</p>
 							</div>
 						</div>
+
 						<div>
 							<h3>Backåkra, Norra Djurgårdsstaden</h3>
 							<p>
@@ -194,7 +207,7 @@
 							</p>
 							<div class="fromLeft left">
 								<img src="../assets/img/projects/brf_backakra.jpg" alt="Foto av Backåkra, Norra Djurgårdsstaden">
-								<p class="micro text-blueGrey">Backåkra, Norra Djurgårdsstaden</p>
+								<p class="micro text-blueGrey center">Backåkra, Norra Djurgårdsstaden</p>
 							</div>
 						</div>
 
