--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 											<li class="dot"></li>
 										</ul>
 										<div class="center-m-down">
-											<a class="fromCenter popupTrigger" data-popup-id="ispect-projects"><p class="small bold text-blue" style="font-size: 16px;">Se fler projekt</p></a>
+											<a class="fromCenter popupTrigger" data-popup-id="ispect-projects"><p class="micro bold text-blue">Några av våra senaste besiktningsuppdrag</p></a>
 										</div>
 									</div>
 								</div>
