Removed newsletter link and gave custom footer new css declarations

--- a/index.html
+++ b/index.html
@@ -573,14 +573,14 @@
 	<p class="center small text-blueGrey">Läs vårt nyhetsbrev!</p>
 	<div class="container-lg" id="newsletter">
 		<div class="center-m-down center">
-					<a href="https://medium.com/besiktningsbloggen" target="_blank" style="" class="common-Link globalFooterCard soft-shadow white">
-						<img src="assets/img/nyheter/byggint.png" />
+					<a href="#" target="_blank" style="" class="common-Link globalFooterCard soft-shadow white">
+						<img src="assets/img/nyheter/byggint.png" alt="besiktningsman.se nyhetsbrev - hur vi förnyar byggbranschen" />
 					</a>
 		</div>
 
 	</div>
 <!-- Footer -->
-<section class="slide customFooter" style="background: #f2f9ff;color: #333;">
+<section class="slide customFooter">
   <div class="content">
     <div class="container-lg">
       <div class="wrap">
