added photo drop shadow class to news images

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -195,7 +195,7 @@
 								Rinkebyterrassen är nu färdigställt och har invigning under helgen den 15:e till 16:e September.
 							</p>
 							<div class="fromLeft left">
-								<img class=""src="../assets/img/projects/sweco_rinkebyterrass.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
+								<img class="soft-shadow"src="../assets/img/projects/sweco_rinkebyterrass.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
 								<p class="micro text-blueGrey center">Rinkebyterrassen, Rinkeby</p>
 							</div>
 						</div>
@@ -206,7 +206,7 @@
 								I mars 2017 byggstartades Einar Mattssons projekt Backåkra med 81 hyresrättslägenheter i Norra Djurgårdsstaden i Stockholm. Besiktningsman.se utför här entreprenadbesiktning med iSpect, en metod som redan används i ett 50-tal olika projekt.
 							</p>
 							<div class="fromLeft left">
-								<img src="../assets/img/projects/brf_backakra.jpg" alt="Foto av Backåkra, Norra Djurgårdsstaden">
+								<img class="soft-shadow" src="../assets/img/projects/brf_backakra.jpg" alt="Foto av Backåkra, Norra Djurgårdsstaden">
 								<p class="micro text-blueGrey center">Backåkra, Norra Djurgårdsstaden</p>
 							</div>
 						</div>
